# DFNS-SC-SOL

./: .gitignore  Anchor.toml  Cargo.toml  README.md  notes.md  package-lock.json  package.json  tsconfig.json
dfns/: DFNSCommon.ts  DeployProgram.ts  DeployStableCoin.ts  ExecutePayment.ts  InitPayment.ts  ListWallets.ts  SetFXRate.ts  StableCoinOps.ts
programs/cross-border-payment/: Cargo.toml
programs/cross-border-payment/src/: lib.rs
programs/hello-world/: Cargo.toml
programs/hello-world/src/: lib.rs
prompts/: 0-LLM-init.md  1-LLM-xb.md  2-LLM-SolKit.md
service-account/: service-account.pub.pem
tests/: cross-border-payment.ts
